--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openphacts.data</groupId>
   <artifactId>chembl-rdf</artifactId>
-  <version>20.0</version>
+  <version>20.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>ChEML RDF data</name>
   <properties>
@@ -27,7 +27,7 @@
         </executions>
         <configuration>
           <url>http://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBL-RDF/${project.version}/</url>
-          <toDir>${project.build.directory}/classes</toDir>
+          <toDir>${project.build.directory}/classes/chembl</toDir>
         </configuration>
       </plugin>
     </plugins>
